tests/e2e/semantics/service_output_unique.error
Error: syntax error in story at line 2, column 10

2|        http server
               ^^^^^^

E0108: Service output `server` must be unique. Use `as outputName`
