tests/e2e/semantics/service_output_unique.story
http server
    http server
        a = 0
